# hs-hucheduler

./: LICENSE  README.md  hs-hucheduler.cabal  hucheduler.cabal  schedules-example  schedules-initial
src/: Main.hs
src/Data/: Hucheduler.hs
