name:                hucheduler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aiya000/hs-hucheduler#readme
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hucheduler
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Data.Hucheduler
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing -Wno-unused-do-bind
  build-depends:       base >= 4.7 && < 5
                     , easy-file
                     , either
                     , readline
                     , safe
                     , safe-exceptions
                     , text
                     , text-show
                     , time
